--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="location" id="home">
         <h1 id="home">Popular on Netflix</h1>
         <div class="box">
-          <a href=""><img src="assets/p1.PNG" alt=""></a>
+          <a href=""><img src="./assets/p1.PNG" alt="movies"></a>
           <a href=""><img src="./assets/p2.PNG" alt=""></a>
           <a href=""><img src="./assets/p3.PNG" alt=""></a>
           <a href=""><img src="./assets/p4.PNG" alt=""></a>
